<resources>
    <string name="app_name">My App Internship</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_goto">Go to</string>
    <string name="action_search">Search</string>
    <string name="action_about">About</string>
    <string name="ToDay">Today</string>
    <string name="HolidayOfMonth">Holiday in month</string>
    <string name="NameEvent">Name event</string>
    <string name="TimeEvent">Time</string>
    <string name="AddressEvent">Address of event</string>
    <string name="DescribeHoliday">Describe</string>
    <string name="Sunday">Sun</string>
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="Thuday">Thu</string>
    <string name="Friday">Fri</string>
    <string name="Saturday">Sat</string>
    <string name="Cancel">Cancel</string>
    <string name="Done">Done</string>
    <string name="AllDay">All day</string>
    <string name="Guests">Guests</string>
    <string name="Describe">Describe</string>
    <string name="StartDate">Start date</string>
    <string name="StartTime">Start time</string>
    <string name="EndDate">End date</string>
    <string name="EndTime">End time</string>
    <string name="Event">Event</string>
    <string name="Lunar">Lunar</string>
    <string name="dau_phay">,</string>
    <string name="SundayFull">Sunday</string>
    <string name="Detail">Detail</string>
    <string name="Clode">Close</string>
    <string name="Delete">Delete</string>
    <string name="Edit">Edit</string>
    <string name="Close">Close</string>
    <string name="Version">version 1.0</string>
    <string name="copyright">Copyright@2017 Phan Ngoc Hieu</string>
    <string name="icon">Some icons are created by Google</string>
    <string name="SearchData">search name event or address</string>
</resources>
