<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:background="@drawable/border_item_table">
        <TableRow>
            <TextView android:text="@string/Sunday"
                android:layout_gravity="center"/>
            <TextView android:text="@string/Monday"
                android:layout_gravity="center"/>
            <TextView android:text="@string/Tuesday"
                android:layout_gravity="center"/>
            <TextView android:text="@string/Wednesday"
                android:layout_gravity="center"/>
            <TextView android:text="@string/Thuday"
                android:layout_gravity="center"/>
            <TextView android:text="@string/Friday"
                android:layout_gravity="center"/>
            <TextView android:text="@string/Saturday"
                android:layout_gravity="center"/>
        </TableRow>
    </TableLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_calender_view">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>