<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="3"
           android:orientation="vertical">
           <TableLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:stretchColumns="*"
               android:background="@drawable/border_item_table">
               <TableRow>
                   <TextView android:text="@string/Sunday"
                       android:layout_gravity="center"/>
                   <TextView android:text="@string/Monday"
                       android:layout_gravity="center"/>
                   <TextView android:text="@string/Tuesday"
                       android:layout_gravity="center"/>
                   <TextView android:text="@string/Wednesday"
                       android:layout_gravity="center"/>
                   <TextView android:text="@string/Thuday"
                       android:layout_gravity="center"/>
                   <TextView android:text="@string/Friday"
                       android:layout_gravity="center"/>
                   <TextView android:text="@string/Saturday"
                       android:layout_gravity="center"/>
               </TableRow>
           </TableLayout>
           <android.support.v7.widget.RecyclerView
               android:layout_width="match_parent"
               android:layout_height="200dp"
               android:id="@+id/list_month">

           </android.support.v7.widget.RecyclerView>
       </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_margin="@dimen/general"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Event"
            android:textSize="@dimen/largeText"
            />
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_event_month"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/HolidayOfMonth"
        android:textSize="@dimen/largeText"
        android:layout_margin="@dimen/general"
        android:id="@+id/txtHoliday"/>

</LinearLayout>