<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NameEvent"
        android:textSize="@dimen/largeText"
        android:layout_gravity="center"
        android:id="@+id/txtNameHoliday"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TimeEvent"
        android:layout_gravity="center"
        android:textSize="@dimen/mediumText"
        android:id="@+id/txtTimeHoliday"/>
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/DescribeHoliday"
       android:id="@+id/DescribeOfHoliday"/>

</LinearLayout>