<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/NameEvent"
    android:textSize="@dimen/largeText"
    android:layout_gravity="center"
    android:id="@+id/txtNameEvent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TimeEvent"
        android:layout_gravity="center"
        android:textSize="@dimen/mediumText"
        android:id="@+id/txtTimeEvent"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/general">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddressEvent"
            android:layout_gravity="center"
            android:textSize="@dimen/mediumText"
            android:id="@+id/txtAddressEvent"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgMap"
            android:src="@mipmap/map"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

</LinearLayout>