<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/general">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/StartDate"
                android:textSize="@dimen/mediumText"
                android:layout_marginLeft="@dimen/general"
                android:id="@+id/txtStartDate"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/mediumText"
                android:text="@string/TimeEvent"
                android:layout_marginLeft="@dimen/general"
                android:id="@+id/txtTime"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NameEvent"
            android:layout_marginLeft="@dimen/general"
            android:textSize="@dimen/largeText"
            android:id="@+id/txtNameEvent"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="8:00"
            android:textSize="@dimen/largeText"
            android:id="@+id/txtStartTime"/>
    </LinearLayout>
</LinearLayout>